# weather-fusion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: forecast.yml
docs/: ARCHITECTURE.md
src/weather_fusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/weatherfusion/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/weatherfusion/ingest/: alerts.py  cache.py  dwml.py  grib.py  gridpoint.py  ndfd.py  rss.py
src/weatherfusion/processing/: ehs.py  ensemble.py
src/weatherfusion/report/: csv.py  html.py  image.py
src/weatherfusion/report/templates/: report.html.j2
src/weatherfusion/util/: emailer.py  http.py  logging.py  time.py
tests/: test_dwml_parser.py  test_ehs.py  test_ensemble.py
tests/fixtures/: dwml_sample.xml
